remove university crest logo

--- a/search-app/public/index.html
+++ b/search-app/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_sm.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>USYD Search</title>
+  <title>usydSearch</title>
 </head>
 
 <body>
